--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "dev": "nodemon listen.js",
     "seed": "knex seed:run",
     "test-utils": "mocha spec/utils.spec.js",
-    "test": "mocha spec/app.spec.js"
+    "test": "mocha spec/app.spec.js",
+    "seed-test": "npm run setup-dbs && NODE_ENV=test knex seed:run"
+   
   },
   "repository": {
     "type": "git",
